Fixed some minor UI issues (button margins, display bugs in Firefox, hidden hor. scrollbars in CRUD view)

--- a/structr-ui/src/main/resources/structr/css/crud.css
+++ b/structr-ui/src/main/resources/structr/css/crud.css
@@ -239,7 +239,6 @@ img.thumbnail {
 }
 
 #dialogBox .dialogText .props {
-    width: 100%;
     height: 100%;
 }
 
